--- a/Recommender_Models.ipynb
+++ b/Recommender_Models.ipynb
@@ -5777,34 +5777,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 38,
       "metadata": {
         "id": "sNp_7_DI9nFi",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16b1fa67-d282-4f89-d8db-431189f74b7b"
+        "outputId": "d2a7566a-9b16-4c98-d371-dd67b7fcc810"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.90130663 0.87219298 0.95062975]\n",
-            " [0.87184708 0.88453906 1.1008001 ]\n",
-            " [0.89399271 0.96899443 1.98529731]]\n"
+            "batch_size: 1024, learning_rate: 0.0001, test MSE: 0.9013066346810351\n",
+            "batch_size: 1024, learning_rate: 0.001, test MSE: 0.8721929832350457\n",
+            "batch_size: 1024, learning_rate: 0.01, test MSE: 0.9506297500985029\n",
+            "batch_size: 128, learning_rate: 0.0001, test MSE: 0.8718470807009836\n",
+            "batch_size: 128, learning_rate: 0.001, test MSE: 0.8845390649316505\n",
+            "batch_size: 128, learning_rate: 0.01, test MSE: 1.1008000958531003\n",
+            "batch_size: 16, learning_rate: 0.0001, test MSE: 0.893992713248031\n",
+            "batch_size: 16, learning_rate: 0.001, test MSE: 0.968994428697534\n",
+            "batch_size: 16, learning_rate: 0.01, test MSE: 1.9852973118579096\n"
           ]
         }
       ],
       "source": [
-        "print(result)\n",
-        "\n",
-        "# for i in range(len(latent_factors)):\n",
-        "#     plt.plot(latent_factors[i], test_loss_for_each_k[i], 'o', label = latent_factors[i])\n",
-        "\n",
-        "# plt.legend()\n",
-        "# plt.show()"
+        "for i in range(len(batch_size_candidates)):\n",
+        "    for j in range(len(learning_rate_candidates)):\n",
+        "        print(\"batch_size: {}, learning_rate: {}, test MSE: {}\".format(batch_size_candidates[i], learning_rate_candidates[j], result[i][j]))\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CXfl6Iab3uKE"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
